<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/character_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/character_detail_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/teal_700" />

            <LinearLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/character_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/character_detail_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/character_detail_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/species" />

                <TextView
                    android:id="@+id/character_detail_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/origin" />

                <LinearLayout
                    android:id="@+id/episode_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/episode_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/episodes_title"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ListView
                        android:id="@+id/episode_list_view"
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="200dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>